<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sidebar_header"
            android:ems="10"
            android:padding="5dp"
            android:textColor="@color/sidebar_fontColor"
            android:text="@string/actions"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2.5dp"
            android:textColor="#444"

            android:background="@color/sidebar_button"
            android:text="@string/capture_image" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.5dp"
            android:textColor="#444"
            android:layout_marginBottom="5dp"
            android:background="@color/sidebar_button"
            android:text="@string/capture_video" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/sidebar_fontColor"
            android:background="@color/sidebar_header"
            android:padding="5dp"
            android:text="@string/currentPressure"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="1013 mBar" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:textColor="@color/sidebar_fontColor"
            android:layout_height="wrap_content"
            android:background="@color/sidebar_header"
            android:padding="5dp"
            android:text="@string/currentDepth"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="-10 meters" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sidebar_header"
            android:textColor="@color/sidebar_fontColor"
            android:padding="5dp"
            android:text="@string/currentPosition"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="10.85, 10.51" />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:textColor="@color/sidebar_fontColor"
            android:layout_height="wrap_content"
            android:background="@color/sidebar_header"
            android:ems="10"
            android:padding="5dp"
            android:text="@string/light1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:padding="10dp"
            android:progress="10" />

        <TextView
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:textColor="@color/sidebar_fontColor"
            android:layout_height="wrap_content"
            android:background="@color/sidebar_header"
            android:ems="10"
            android:padding="5dp"
            android:text="@string/light2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBar2"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:padding="10dp"
            android:progress="10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="1264dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="Pressure sensor connected"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="GPS connected"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="Lights connected"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="817dp"
        android:layout_height="540dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:color/holo_blue_bright" />
</android.support.constraint.ConstraintLayout>